# patchwork

./: .clang-format  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yml  .mise.toml  BUILD.md  DESCRIPTION  NAMESPACE  README.md  meson.build  rules-orig.txt  rules.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/prompts/: opsx-apply.prompt.md  opsx-explore.prompt.md  opsx-ff.prompt.md  opsx-propose.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
R/: patches.R  setups.R
analysis/: README.md  tile_analysis.R
analysis/output/: advance_breakeven.csv  tile_summary.csv
codegen/: generate_patches.R  generate_setups.R
cpp/: game_logger.cpp  game_logger.hpp  game_setup.hpp  game_setups.hpp  game_state.hpp  meson.build  move.hpp  move_application.cpp  move_application.hpp  move_generation.cpp  move_generation.hpp  patchwork.hpp  play_driver.cpp  player_state.hpp  random_agent.cpp  random_agent.hpp  simplified_game_state.hpp  terminal_and_scoring.hpp
cpp/tui/: display.cpp  display.hpp  history.cpp  history.hpp  input.cpp  input.hpp  launch.cpp  tui_main.cpp
data/: patches.yaml
docs/: glossary.md
openspec/: config.yaml  roadmap.md
openspec/changes/add-game-glossary/: design.md  proposal.md  tasks.md
openspec/changes/add-mise-tasks/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-02-project-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-add-mise-tasks/: design.md  proposal.md
openspec/changes/archive/2026-04-03-game-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-setup-copilot-tools/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-tile-single-char-names/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-03-without-placement-only/: design.md  tasks.md
openspec/changes/archive/2026-04-05-add-game-glossary/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-simplified-rules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-tui-interactive-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-07-fast-ci-cd-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-07-organize-specs/: design.md  tasks.md
openspec/changes/check-user-deps/: design.md  proposal.md  tasks.md
openspec/changes/fast-ci-cd-setup/: design.md  proposal.md  tasks.md
openspec/changes/game-setup/: design.md  proposal.md  tasks.md
openspec/changes/organize-specs/: design.md  proposal.md  tasks.md
openspec/changes/piece-placement/: design.md  proposal.md  tasks.md
openspec/changes/project-foundation/: design.md  tasks.md
openspec/changes/r-package-structure/: design.md  proposal.md  tasks.md
openspec/changes/random-sampling-agents/: design.md  proposal.md  tasks.md
openspec/changes/richer-logging/: design.md  proposal.md  tasks.md
openspec/changes/setup-copilot-tools/: design.md  proposal.md  tasks.md
openspec/changes/simplified-rules/: design.md  proposal.md  tasks.md
openspec/changes/tile-analysis/: design.md  proposal.md  tasks.md
openspec/changes/tile-single-char-names/: design.md  proposal.md  tasks.md
openspec/changes/tui-interactive-mode/: design.md  tasks.md
openspec/changes/without-placement-only/: proposal.md  tasks.md
openspec/specs/: README.md
openspec/specs/agents/: spec.md
openspec/specs/analysis/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/data/: spec.md
openspec/specs/devcontainer/: spec.md
openspec/specs/engine/: spec.md
openspec/specs/game-core/: spec.md
openspec/specs/game-glossary/: spec.md
openspec/specs/game-logger/: spec.md
openspec/specs/game-logic/: spec.md
openspec/specs/game-setup/: spec.md
openspec/specs/game-state/: spec.md
openspec/specs/infrastructure/: spec.md
openspec/specs/mise-tasks/: spec.md
openspec/specs/move-application/: spec.md
openspec/specs/move-generation/: spec.md
openspec/specs/patch-catalog/: spec.md
openspec/specs/play-driver/: spec.md
openspec/specs/r-package-infra/: spec.md
openspec/specs/r-ppm-install/: spec.md
openspec/specs/random-agent/: spec.md
openspec/specs/simplified-game-state/: spec.md
openspec/specs/terminal-and-scoring/: spec.md
openspec/specs/tui/: spec.md
openspec/specs/tui-display/: spec.md
openspec/specs/tui-input/: spec.md
openspec/specs/tui-launch/: spec.md
openspec/specs/tui-undo-redo/: spec.md
scripts/: install-tools.sh
src/: game_logger.cpp  game_setup.hpp  game_setups.hpp  game_state.hpp  meson.build  move.hpp  patchwork.hpp  play_driver.cpp  player_state.hpp  random_agent.cpp  simplified_game_state.hpp
src/tui/: display.cpp  history.cpp  history.hpp  input.cpp  launch.hpp  tui_main.cpp
tests/: meson.build  test_game_logger.cpp  test_game_setup.cpp  test_game_state.cpp  test_main.cpp  test_move.cpp  test_move_application.cpp  test_move_generation.cpp  test_player_state.cpp  test_random_agent.cpp  test_simplified_game_state.cpp  test_terminal_and_scoring.cpp  tui_display_test.cpp  tui_history_test.cpp  tui_snapshot_test.cpp
tests/snapshots/: cpu_multi_turn.txt  frame_080.txt  frame_080_color.txt  frame_080_h40.txt  frame_120.txt  frame_160.txt
tests/snapshots/game_seq/: step_00_initial.txt  step_01_ply00.txt  step_02_ply01.txt  step_03_ply02.txt  step_04_ply03.txt  step_05_ply04.txt  step_06_ply05.txt  step_07_ply06.txt  step_08_ply07.txt  step_09_ply08.txt  step_10_ply09.txt  step_11_undo1.txt  step_12_undo2.txt  step_14_cont00.txt  step_15_cont01.txt  step_16_cont02.txt  step_17_cont03.txt  step_18_cont04.txt  step_19_cont05.txt  step_20_cont06.txt  step_21_cont07.txt  step_22_cont08.txt  step_23_cont09.txt  step_24_cont10.txt  step_25_cont11.txt  step_26_cont12.txt  step_27_cont13.txt  step_28_cont14.txt  step_29_cont15.txt  step_30_cont16.txt  step_31_cont17.txt  step_32_cont18.txt  step_33_cont19.txt  step_34_cont20.txt  step_35_cont21.txt  step_36_cont22.txt  step_37_cont23.txt  step_38_cont24.txt  step_39_cont25.txt  step_40_cont26.txt  (+1 more)
(+55 files in other folders)
